--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 body {
     font-family: Roboto, sans-serif;
-    background-color:rgb(109, 208, 208);
+    background-color:#FFFFFF;
 }
-/* header */
+/* Logo and Header */
 
 .logo {
 font-family: 'Raleway'; 
@@ -13,19 +13,18 @@ letter-spacing: 0.03em;
 color: #2196F3;
 }
 .logo-item{
+font-family: 'Roboto';
+font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
+text-decoration: none;
 color: #212121
 }
 .list{
     list-style: none;
 }
-.link{
-    text-decoration: none;
-}
-
 .logo-item:hover,
 .logo-item:focus {
     color: #2196F3; 
@@ -35,23 +34,31 @@ color: #212121
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    text-decoration: none;
     color: #757575;  
+   
 }
 .header-mail, .header-tel:hover, 
 .header-mail, .header-tel:focus {
     color: #2196F3;
 }
 /* main */
+.hero{
+    background-color: #2F303A;
+}
 
 .hero-title {
 font-weight: 900;
 font-size: 44px;
 line-height: 1.36;
 letter-spacing: 0.06em;
+text-align: center;
 color: #FFFFFF;
 }
 /* button  */
 .hero-button{
+font-family: 'Roboto';
+font-style: normal;
 font-weight: 700;
 font-size: 16px;
 line-height: 1.88;
@@ -73,4 +80,87 @@ background-color: #F5F4FA;
 .portfolio-button:focus{
     color: #FFFFFF;
     background-color:#2196F3 ;
+}
+.hero-section{
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+color: #212121;
+}
+.hero-text{
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: #757575;
+}
+/* Images and Team */
+.images-title,.team-title{
+font-weight: 700;
+font-size: 36px;
+line-height: 1.16;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+}
+.team-item{
+font-weight: 500;
+font-size: 16px;
+line-height: 1.18;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+}
+.team-process{
+font-weight: 400;
+font-size: 16px;
+line-height: 1.18;
+text-align: center;
+letter-spacing: 0.03em;
+color: #757575;
+}
+/* Footer */
+.footer{
+    background-color: #2F303A;;
+}
+.footer-address{
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: #FFFFFF;
+}
+.footer-mail, .footer-tel{
+font-weight: 400;
+font-size: 14px;
+line-height:1.71;
+letter-spacing: 0.03em;
+text-decoration: none;
+color: rgba(255, 255, 255, 0.6); 
+}
+/* Portfolio images */
+.main-list{
+font-weight: 700;
+font-size: 18px;
+line-height: 2.0;
+letter-spacing: 0.06em;
+color: #212121;
+}
+.main-p{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+     color: #757575;  
+}
+.main-h{
+font-weight: 700;
+font-size: 18px;
+line-height: 2.0;
+letter-spacing: 0.06em;
+color: #212121;
+}
+.link{
+    text-decoration: none;
 }
