--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,12 @@ body {
     font-family: Roboto, sans-serif;
     background-color:#FFFFFF;
 }
-/* Logo and Header */
+
+:root {
+    --main-text-color:#FFFFFF;
+    --second-text-color: #212121;
+}
+                               /* Logo and Header */
 
 .logo {
 font-family: 'Raleway'; 
@@ -13,14 +18,12 @@ letter-spacing: 0.03em;
 color: #2196F3;
 }
 .logo-item{
-font-family: 'Roboto';
-font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 text-decoration: none;
-color: #212121
+color: var(--second-text-color)
 }
 .list{
     list-style: none;
@@ -42,9 +45,24 @@ color: #212121
 .header-mail, .header-tel:focus {
     color: #2196F3;
 }
-/* main */
+                                 /* HERO */
 .hero{
     background-color: #2F303A;
+}
+
+.hero-item {
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+color: var(--second-text-color);
+}
+
+.hero-text {
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: #757575;
 }
 
 .hero-title {
@@ -53,22 +71,20 @@ font-size: 44px;
 line-height: 1.36;
 letter-spacing: 0.06em;
 text-align: center;
-color: #FFFFFF;
+color: var(--main-text-color)
 }
-/* button  */
+                       /* buttons web studio and portfolio  */
 .hero-button{
-font-family: 'Roboto';
-font-style: normal;
+font-family: 'Roboto' sans-serif;
 font-weight: 700;
 font-size: 16px;
 line-height: 1.88;
 letter-spacing: 0.06em;
-color:#FFFFFF;
+color: #FFFFFF;
 background-color:#2196F3 ;
 }
 .portfolio-button{
-font-family: 'Roboto';
-font-style: normal;
+font-family: 'Roboto' sans-serif;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.62;
@@ -81,71 +97,58 @@ background-color: #F5F4FA;
     color: #FFFFFF;
     background-color:#2196F3 ;
 }
-.hero-section{
-font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-color: #212121;
-}
-.hero-text{
-font-weight: 400;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-color: #757575;
-}
-/* Images and Team */
+
+
+                                 /* Images and Team */
 .images-title,.team-title{
 font-weight: 700;
 font-size: 36px;
 line-height: 1.16;
 text-align: center;
 letter-spacing: 0.03em;
-color: #212121;
+color: var(--second-text-color)
 }
-.team-item{
+
+                       /* --------------OUR TEAM----------- */
+
+.team-item ,.team-person {
 font-weight: 500;
 font-size: 16px;
 line-height: 1.18;
 text-align: center;
 letter-spacing: 0.03em;
-color: #212121;
+color: var(--second-text-color)
 }
+
 .team-process{
-font-weight: 400;
 font-size: 16px;
 line-height: 1.18;
 text-align: center;
 letter-spacing: 0.03em;
 color: #757575;
 }
-/* Footer */
+                            /* Footer Web studio and Portfolio*/
 .footer{
     background-color: #2F303A;;
 }
-.footer-address{
-font-weight: 400;
+.footer-address ,.footer-mail,.footer-tel{
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
-color: #FFFFFF;
+font-style: normal;
+color:var(--main-text-color)
 }
 .footer-mail, .footer-tel{
-font-weight: 400;
-font-size: 14px;
-line-height:1.71;
-letter-spacing: 0.03em;
-text-decoration: none;
+    text-decoration: none;
 color: rgba(255, 255, 255, 0.6); 
 }
-/* Portfolio images */
+                                 /* Portfolio images */
 .main-list{
 font-weight: 700;
 font-size: 18px;
 line-height: 2.0;
 letter-spacing: 0.06em;
-color: #212121;
+color:var(--second-text-color)
 }
 .main-p{
     font-weight: 400;
@@ -159,8 +162,22 @@ font-weight: 700;
 font-size: 18px;
 line-height: 2.0;
 letter-spacing: 0.06em;
-color: #212121;
+color: var(--second-text-color)
 }
+
 .link{
     text-decoration: none;
 }
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
