--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Roboto, sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color:#FFFFFF;
 }
 
@@ -75,7 +75,7 @@ color: var(--main-text-color)
 }
                        /* buttons web studio and portfolio  */
 .hero-button{
-font-family: 'Roboto' sans-serif;
+font-family: 'Roboto', sans-serif;
 font-weight: 700;
 font-size: 16px;
 line-height: 1.88;
@@ -84,7 +84,7 @@ color: #FFFFFF;
 background-color:#2196F3 ;
 }
 .portfolio-button{
-font-family: 'Roboto' sans-serif;
+font-family: 'Roboto', sans-serif;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.62;
