--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@ line-height: 1.19;
 letter-spacing: 0.03em;
 color: #2196F3;
 }
+
+.logo-item.current{
+    color:#2196F3
+}
+
 .logo-item{
 font-weight: 500;
 font-size: 14px;
@@ -121,6 +126,7 @@ color: var(--second-text-color)
 }
 
 .team-process{
+font-weight: 400;
 font-size: 16px;
 line-height: 1.18;
 text-align: center;
